src/app.css
*,
*::before,
*::after{
  margin: 0;
  padding: 0;
  box-sizing: border-box;
}

:root {
  --main-radius: 5px;
  --main-padding: 5px;
}

body {

  font-family: "Lato",sans-serif;
  margin: 0px;
  font-size: 1rem;
  font-weight: 400;
  line-height: 1.5;
  
  text-align: left;
  background-color: #fff;
  overflow: hidden;
}

h5 {
  font-weight: 600;
  margin: 0px;
  line-height: 1.5;
  color: black;
  /* font-size: 1.2em; */
  font-size: 20px;
}

a {
  text-align: center;
  display: block;
  font-weight: bold;
  text-decoration: none;
  background-color: transparent;
}


.container {
  display: grid;
  height: 100vh;
  width: 100vw;
  grid-template-columns: min-content 1fr 1fr 1fr;
  grid-template-rows: 0.2fr 3fr;
  grid-template-areas:
  "sidebar nav nav nav"
  "sidebar main main main";

  /* grid-gap: 0.2rem; */
  /* overflow-y: auto; */
}

main {
  grid-area: main;
  padding: 15px 20px 10px 20px;
  overflow-y: auto;
  
  /* background: #f3f4f6; */
  /* margin: 15px 5vw */

  overflow-x: hidden;
}


footer {
  background: #1de9b6;
  grid-area: footer;
  border-radius: var(--main-radius);
  padding-top: var(--main-padding);
}


@media (max-width: 479.98px) {
  .container {
    grid-template-columns: 1fr;
    grid-template-rows: 0.2fr 3fr;
    /* grid-template-rows: 0.2fr auto; */
    grid-template-areas:
      "nav"
      "main";
  }

  body {
    overflow-y: auto;
    overflow-x: hidden;
  }

  main {    
    overflow-y: unset;
  }
}

